project-config-repo/overlays/prod/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod-project
  name: broadcaster-app-dep
