project-config-repo/overlays/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod-project
  name: todo-frontend-svc
