project-config-repo/overlays/prod/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: prod-project
