project-config-repo/overlays/prod/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todos-routes
  namespace: prod-project
